stripped nexusguard specific information

--- a/demo.html
+++ b/demo.html
@@ -5,15 +5,14 @@
     <meta charset=utf-8 />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Demo Page for NexusGuard Eval
+      Generic Test Website
     </title>
   </head>
 
   <body>
-    <h1>Demo Page for NexusGuard Eval</h1>
+    <h1>Test Website</h1>
     <p>
-      This is a demo page created for the purposes of evaluating
-      NexusGuard's Application Protection and DNS Protection offerings.
+      This is a demo page.
     </p>
     
     <div class="wrapper">
